--- a/Folder.html
+++ b/Folder.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
     <style>
 
         * {
@@ -16,7 +17,7 @@
             list-style-type: none;
         } 
         li {
-            font-family: 'Anton', sans-serif;
+            
             padding: 30px;
             border:2px solid green;
         }
@@ -26,11 +27,12 @@
         .ul_phu {
             position: absolute;
             left:0%;
-            bottom: 53.5%;
+            bottom: 53.8%;
             width: 112px;
             display: none;
         }
         .li_phu {
+            font-family: 'Alfa Slab One', cursive;
             float: left;
             padding: 10px;
             width: 10%;
@@ -45,6 +47,7 @@
             background-color:#1565C0;
         }
         .li2 {
+            font-family: 'Anton', sans-serif;
             border: 1.5px solid #2b5f75;
         }
         .ul_phu:hover {
