--- a/IgoRoth.html
+++ b/IgoRoth.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Phototime </title>
-	<link rel="stylesheet" type="text/css" href="phototime.css">
+	<link rel="stylesheet" type="text/css" href="IgoRoth.css">
 	<meta charset="utf-8">
 	<script src="https://use.fontawesome.com/c4dfb90488.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Lobster|Spectral|Yanone+Kaffeesatz" rel="stylesheet">
